# PyRefra

./: .gitignore  1_Installation.md  2_Data_preparation.md  3_Running_PyRefra.md  Data_preparation.md  History_PyRefra.docx  Installation  Linux_Installation.md  PyRefra.docx  PyRefra.py  PyRrefra_variables.xlsx  README.md  pyproject.toml  pyrefra_start.py  refraData.py  refraPlot.py  refraPy.py  refraPy_variables.xlsx  refraWindow.ui  tmp3xo52dqy
Example/: PyRefra.config  README.md  Rec_00001.seg2  Rec_00003.seg2  Rec_00004.seg2  Rec_00005.seg2  Rec_00010.seg2  Rec_00012.seg2  Rec_00013.seg2  Rec_00015.seg2  Rec_00018.seg2  Rec_00020.seg2  Rec_00021.seg2  Rec_00023.seg2  Rec_00025.seg2  Rec_00026.seg2  Rec_00027.seg2  Rec_00028.seg2  Rec_00030.seg2  Rec_00032.seg2  receivers.geo  shots.geo
Obspy/: seg2.py
Utility_programs/: Acquisition-scheme.py  Dialog_HZ.py  Extract_velocities.py  Extract_velocity_isoline.py  PIK_2_picks_dat.py  Picks_to_vista-header.py  README.md  Tomo_coordinate_projection.py  picks_sgt_2_dat.py  seg2_renumber.py  turn_coordinates.py  v-tomo2v-RMS.py
doc/: PyRrefra_variables.xlsx
example/: README.md  README_example.md  Rec_00002.seg2  Rec_00006.seg2  Rec_00007.seg2  Rec_00008.seg2  Rec_00009.seg2  Rec_00011.seg2  Rec_00014.seg2  Rec_00016.seg2  Rec_00017.seg2  Rec_00019.seg2  Rec_00024.seg2  Rec_00029.seg2  Rec_00031.seg2  Rec_00033.seg2  Rec_00034.seg2  receivers.geo  shots.geo
pyrefra/: LICENSE  Pyrefra.py  __init__.py  __main__.py  pyrefra_script.py  refraData.py  version.py
source/: Pyrefra.py  __init__.py  __main__.py  pyrefra_script.py  pyrefra_start.py  (+1 more)
(+18 files in other folders)
